Remove newInstance deprecation warnings