@@ -56,8 +56,8 @@ public class PassThroughElementComponentHandler extends ComponentHandler {
         UIComponent result = null;
         try {
             Class<?> clazz = Util.loadClass("com.sun.faces.component.PassthroughElement", this);
-            result = (UIComponent) clazz.newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException cnfe) {
+            result = (UIComponent) clazz.getDeclaredConstructor().newInstance();
+        } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException cnfe) {
             throw new FacesException(cnfe);
         }
 
